syntax = "proto3";

package flow;

option go_package = "github.com/vorteil/direktiv/pkg/flow";

import "google/protobuf/empty.proto";

import "pkg/flow/resume.proto";
import "pkg/flow/report-action-results.proto";
import "pkg/flow/get-namespace-variable.proto";
import "pkg/flow/get-workflow-variable.proto";
import "pkg/flow/get-instance-variable.proto";
import "pkg/flow/set-namespace-variable.proto";
import "pkg/flow/set-workflow-variable.proto";
import "pkg/flow/set-instance-variable.proto";
import "pkg/flow/action-log.proto";

service DirektivFlow {
	rpc ReportActionResults (ReportActionResultsRequest) returns (google.protobuf.Empty) {}
	rpc Resume (ResumeRequest) returns (google.protobuf.Empty) {}
	rpc GetNamespaceVariable (GetNamespaceVariableRequest) returns (stream GetNamespaceVariableResponse) {}
	rpc GetWorkflowVariable (GetWorkflowVariableRequest) returns (stream GetWorkflowVariableResponse) {}
	rpc GetInstanceVariable (GetInstanceVariableRequest) returns (stream GetInstanceVariableResponse) {}
	rpc SetNamespaceVariable (stream SetNamespaceVariableRequest) returns (google.protobuf.Empty) {}
	rpc SetWorkflowVariable (stream SetWorkflowVariableRequest) returns (google.protobuf.Empty) {}
	rpc SetInstanceVariable (stream SetInstanceVariableRequest) returns (google.protobuf.Empty) {}
	rpc ActionLog(ActionLogRequest) returns (google.protobuf.Empty) {}
}