syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

import "google/protobuf/empty.proto";

import "pkg/ingress/add-namespace.proto";
import "pkg/ingress/delete-namespace.proto";
import "pkg/ingress/get-namespaces.proto";
import "pkg/ingress/add-workflow.proto";
import "pkg/ingress/delete-workflow.proto";
import "pkg/ingress/cancel-instance.proto";
import "pkg/ingress/get-instance.proto";
import "pkg/ingress/get-instances.proto";
import "pkg/ingress/get-instances-by-workflow.proto";
import "pkg/ingress/get-instance-logs.proto";
import "pkg/ingress/get-workflow-name.proto";
import "pkg/ingress/get-workflow-uid.proto";
import "pkg/ingress/get-workflows.proto";
import "pkg/ingress/invoke.proto";
import "pkg/ingress/update-workflow.proto";
import "pkg/ingress/broadcast-event.proto";
import "pkg/ingress/get-secrets.proto";
import "pkg/ingress/delete-secret.proto";
import "pkg/ingress/store-secret.proto";
import "pkg/ingress/get-namespace-logs.proto";
import "pkg/ingress/workflow-metrics.proto";
import "pkg/ingress/list-namespace-variables.proto";
import "pkg/ingress/list-workflow-variables.proto";
import "pkg/ingress/get-namespace-variable.proto";
import "pkg/ingress/get-workflow-variable.proto";
import "pkg/ingress/set-namespace-variable.proto";
import "pkg/ingress/set-workflow-variable.proto";

service DirektivIngress {
	rpc AddNamespace (AddNamespaceRequest) returns (AddNamespaceResponse) {}
	rpc DeleteNamespace (DeleteNamespaceRequest) returns (DeleteNamespaceResponse) {}
	rpc GetNamespaces (GetNamespacesRequest) returns (GetNamespacesResponse) {}
	rpc AddWorkflow (AddWorkflowRequest) returns (AddWorkflowResponse) {}
	rpc DeleteWorkflow (DeleteWorkflowRequest) returns (DeleteWorkflowResponse) {}
	rpc GetWorkflowByName (GetWorkflowByNameRequest) returns (GetWorkflowByNameResponse) {}
	rpc GetWorkflowByUid (GetWorkflowByUidRequest) returns (GetWorkflowByUidResponse) {}
	rpc GetWorkflowInstance (GetWorkflowInstanceRequest) returns (GetWorkflowInstanceResponse) {}
	rpc GetWorkflowInstances (GetWorkflowInstancesRequest) returns (GetWorkflowInstancesResponse) {}
	rpc GetNamespaceLogs (GetNamespaceLogsRequest) returns (GetNamespaceLogsResponse) {}
	rpc GetInstancesByWorkflow (GetInstancesByWorkflowRequest) returns (GetInstancesByWorkflowResponse) {}
	rpc GetWorkflowInstanceLogs (GetWorkflowInstanceLogsRequest) returns (GetWorkflowInstanceLogsResponse) {}
	rpc CancelWorkflowInstance (CancelWorkflowInstanceRequest) returns (google.protobuf.Empty) {}
	rpc GetWorkflows (GetWorkflowsRequest) returns (GetWorkflowsResponse) {}
	rpc InvokeWorkflow (InvokeWorkflowRequest) returns (InvokeWorkflowResponse) {}
	rpc UpdateWorkflow (UpdateWorkflowRequest) returns (UpdateWorkflowResponse) {}
	rpc BroadcastEvent (BroadcastEventRequest) returns (google.protobuf.Empty) {}
	rpc GetSecrets (GetSecretsRequest) returns (GetSecretsResponse) {}
	rpc DeleteSecret (DeleteSecretRequest) returns (google.protobuf.Empty) {}
	rpc StoreSecret (StoreSecretRequest) returns (google.protobuf.Empty) {}
	rpc WorkflowMetrics (WorkflowMetricsRequest) returns (WorkflowMetricsResponse) {}
	rpc ListNamespaceVariables (ListNamespaceVariablesRequest) returns (ListNamespaceVariablesResponse) {}
	rpc ListWorkflowVariables (ListWorkflowVariablesRequest) returns (ListWorkflowVariablesResponse) {}
	rpc GetNamespaceVariable (GetNamespaceVariableRequest) returns (stream GetNamespaceVariableResponse) {}
	rpc GetWorkflowVariable (GetWorkflowVariableRequest) returns (stream GetWorkflowVariableResponse) {}
	rpc SetNamespaceVariable (stream SetNamespaceVariableRequest) returns (google.protobuf.Empty) {}
	rpc SetWorkflowVariable (stream SetWorkflowVariableRequest) returns (google.protobuf.Empty) {}
}
